[#76] Add new baseUri method
Signed-off-by: Andy McCright <j.andrew.mccright@gmail.com>